--- a/client/src/styles/scss/Chat.module.scss
+++ b/client/src/styles/scss/Chat.module.scss
@@ -25,7 +25,7 @@
     flex-direction: column;
     gap: 0.15rem;
     color: var(--color-text-dar);
-    p {
+    > p {
       &:nth-child(1) {
         @include FontStyles(normal, 700, 16px, 19px);
       }
@@ -39,7 +39,7 @@
 .contact {
   @include Flexbox($justify: space-between);
   gap: 1rem;
-  svg {
+  > svg {
     color: $purple;
     :hover {
       cursor: pointer;
@@ -61,7 +61,7 @@
   @include Padding(1rem, 3rem);
   gap: 2.2rem;
   background: var(--color-bg-dark);
-  div {
+  > div {
     .text {
       @include Flexbox;
       @include FontStyles(normal, 400, 12px, 20px);
@@ -73,7 +73,7 @@
       letter-spacing: 0.14px;
       color: #ffffff;
     }
-    p {
+    > p {
       @include FontStyles(normal, 400, 10px, 12px);
       padding-top: 0.58rem;
       color: var(--color-text-dark);
