--- a/client/src/styles/scss/Header.module.scss
+++ b/client/src/styles/scss/Header.module.scss
@@ -23,7 +23,7 @@
   align-items: center;
   justify-content: center;
   background-color: $coralRed;
-  svg {
+  > svg {
     width: 1.71em;
     height: 1.71em;
     color: $white;
