--- a/client/src/styles/scss/ChatInput.module.scss
+++ b/client/src/styles/scss/ChatInput.module.scss
@@ -7,21 +7,21 @@ $padding: 25px;
   @include Padding(1rem, 3rem);
   width: 100%;
   position: relative;
-  input {
+  > input {
     width: 100%;
     height: 2.5rem;
     border: 1px solid #a5a6f6;
     border-radius: 10px;
     padding-right: 25%;
   }
-  div {
+  > div {
     @include Flexbox($justify: space-between);
     width: 15%;
     position: absolute;
     right: 10%;
     top: 25px;
     gap: 0.5rem;
-    svg {
+    > svg {
       color: $purple;
       cursor: pointer;
     }
