--- a/client/src/styles/scss/Hero.module.scss
+++ b/client/src/styles/scss/Hero.module.scss
@@ -13,7 +13,7 @@
   background: $lightSkyBlue;
   gap: 1.3rem;
 
-  P {
+  > p {
     @include Flexbox;
     @include FontStyles(normal, 600, 9px, 9px);
     width: 93px;
@@ -21,16 +21,16 @@
     background: $white;
     color: $turquoise;
   }
-  div {
+  > div {
     @include Flexbox($justify: space-between);
     width: 100%;
 
-    h2 {
+    > h2 {
       @include FontStyles(normal, 500, 12px, 18px);
       color: $turquoise;
     }
 
-    svg {
+    > svg {
       color: $turquoise;
     }
   }
@@ -38,11 +38,11 @@
 
 .content {
   @extend .hero;
-  h1 {
+  > h1 {
     @include FontStyles(normal, 600, 70px, 95px);
     letter-spacing: -2px;
   }
-  p {
+  > p {
     @include FontStyles(normal, 400, 16px, 28px);
     letter-spacing: 0.5px;
   }
