--- a/client/src/styles/scss/Home.module.scss
+++ b/client/src/styles/scss/Home.module.scss
@@ -1,7 +1,8 @@
 @import "globals";
 
 .home {
-  @include Flexbox;
+  @include Flexbox($items: flex-start);
   @include Padding(0, 3rem);
-  gap: 4rem;
+  flex-direction: column;
+  gap: 2rem;
 }
