--- a/client/src/styles/scss/_globals.scss
+++ b/client/src/styles/scss/_globals.scss
@@ -19,3 +19,8 @@
   border: 1px solid $lightGray;
   border-radius: $tl $tr $bl $br;
 }
+
+@mixin Title {
+  @include FontStyles(normal, 600, 24px, 32px);
+  @include Padding(0.5rem, 0);
+}
