--- a/client/src/styles/scss/_responsive.scss
+++ b/client/src/styles/scss/_responsive.scss
@@ -1,17 +1,101 @@
-@mixin r($point) {
-  @if $point==320 {
-    @media (min-width: 320px) {
-      @content;
-    }
+// @mixin r($point) {
+//   @if $point==320 {
+//     @media (min-width: 320px) {
+//       @content;
+//     }
+//   }
+//   // mobile
+//   @if $point==767 {
+//     @media (max-width: 767px) {
+//       @content;
+//     }
+//   }
+//   // tablet
+//   @if $point >= 768 && $point <= 1023 {
+//     @media (min-width: 768px) and (max-width: 1023px) {
+//       @content;
+//     }
+//   }
+//   // laptop
+//   @if $point >= 1024 && $point <= 1439 {
+//     @media (min-width: 1024px) and (max-width: 1439px) {
+//       @content;
+//     }
+//   }
+//   // desktop
+//   @if $point == 1440 {
+//     @media (min-width: 1440px) {
+//       @content;
+//     }
+//   }
+// }
+
+// 모바일
+$point-mobile: 335px;
+
+// 모바일에서 태블릿
+$point-tabletToMobile: 535px;
+
+// 태블릿
+$point-tablet: 720px;
+
+// 태블릿에서 노트북
+$point-laptopToTablet: 960px;
+
+// 노트북
+$point-laptop: 1024px;
+
+// 노트북에서 데스크탑
+$point-desktopToLaptop: 1500px;
+
+// 데스크탑
+$point-desktop: 1800px;
+
+// 모바일: 최소 "모바일" 사이즈부터 ~최대 "모바일에서 태블릿" 사이즈까지
+@mixin mobile {
+  @media (min-width: #{$point-mobile}) and (max-width: #{$point-tabletToMobile - 1px}) {
+    @content;
   }
-  @if $point==768 {
-    @media (min-width: 768px) {
-      @content;
-    }
+}
+
+// 모바일에서 태블릿 : 최소 '모바일에서 태블릿'사이즈부터 ~ 최대 '태블릿'사이즈까지
+@mixin tabletToMobile {
+  @media (min-width: #{$point-tabletToMobile}) and (max-width: #{$point-tablet - 1px}) {
+    @content;
   }
-  @if $point==1024 {
-    @media (max-width: 1024px) {
-      @content;
-    }
+}
+
+// 태블릿 : 최소'태블릿'사이즈부터 ~ 최대 '태블릿에서 노트북'사이즈까지
+@mixin tablet {
+  @media (min-width: #{$point-tablet}) and (max-width: #{$point-laptopToTablet - 1px}) {
+    @content;
+  }
+}
+
+// 태블릿에서 노트북 : 최소 '태블릿에서 노트북'사이즈부터 ~ 최대 '노트북'사이즈까지
+@mixin laptopToTablet {
+  @media (min-width: #{$point-laptopToTablet}) and (max-width: #{$point-laptop - 1px}) {
+    @content;
+  }
+}
+
+// 노트북 : 최소 '노트북'사이즈부터 ~ 최대 '노트북에서 데스크탑'사이즈까지
+@mixin laptop {
+  @media (min-width: #{$point-laptop}) and (max-width: #{$point-desktopToLaptop - 1px}) {
+    @content;
+  }
+}
+
+// 노트북에서 데스크탑 : 최소 '노트북에서 데스크탑'사이즈부터 ~ 최대 '데스크탑'사이즈까지
+@mixin desktopToLaptop {
+  @media (min-width: #{$point-desktopToLaptop}) and (max-width: #{$point-desktop - 1px}) {
+    @content;
+  }
+}
+
+// 데스크탑 : 최소 '데스크탑'사이즈
+@mixin desktop {
+  @media (min-width: #{$point-desktop}) {
+    @content;
   }
 }
