--- a/client/src/styles/scss/app/Home.module.scss
+++ b/client/src/styles/scss/app/Home.module.scss
@@ -1,12 +1,13 @@
-@import "globals";
-@import "responsive";
+@import "../globals";
+@import "../responsive";
 
 .home {
   @include Flexbox($items: flex-start);
-  @include Padding(0, 3rem);
+  @include Padding(0, 2rem);
   flex-direction: column;
   gap: 2rem;
-  @include r(1024) {
+
+  @include mobile {
     align-items: center;
   }
 }
