--- a/client/src/styles/scss/Hero.module.scss
+++ b/client/src/styles/scss/Hero.module.scss
@@ -1,5 +1,6 @@
 @import "colors";
 @import "globals";
+@import "responsive";
 
 .hero {
   @include Flexbox($items: flex-start);
@@ -42,10 +43,19 @@
     > h1 {
       @include FontStyles(normal, 600, 70px, 95px);
       letter-spacing: -2px;
+
+      @include mobile {
+        font-size: 2.8rem;
+        line-height: 65px;
+      }
     }
     > p {
       @include FontStyles(normal, 400, 16px, 28px);
       letter-spacing: 0.5px;
+      @include mobile {
+        font-size: 0.79rem;
+        line-height: 18px;
+      }
     }
   }
 }
