--- a/client/src/components/home/blog/Blog.module.scss
+++ b/client/src/components/home/blog/Blog.module.scss
@@ -1,18 +1,12 @@
 @import "@/styles/scss/colors";
 @import "@/styles/scss/globals";
+@import "@/styles/scss/responsive";
 
 .blog {
   width: 100%;
   .title {
     @include Title;
   }
-}
-
-.post_list {
-  @include Flexbox($items: flex-start);
-  gap: 1rem;
-  width: 100%;
-  overflow: hidden;
 }
 
 .blog_card {
@@ -58,5 +52,9 @@
     @include FontStyles(normal, 400, 16px, 30px);
     word-break: break-word;
     text-align: justify;
+    @include mobile {
+      font-size: 0.85rem;
+      line-height: 25px;
+    }
   }
 }
