--- a/client/src/components/home/chat/Chat.module.scss
+++ b/client/src/components/home/chat/Chat.module.scss
@@ -25,6 +25,17 @@
     @include Flexbox;
     gap: 1em;
 
+    @include mobile {
+      gap: 0.5em;
+    }
+
+    > img {
+      @include mobile {
+        width: 40%;
+        height: auto;
+      }
+    }
+
     .nickname {
       @include Flexbox($items: flex-start);
       flex-direction: column;
@@ -33,9 +44,15 @@
       > p {
         &:nth-child(1) {
           @include FontStyles(normal, 700, 16px, 19px);
+          @include mobile {
+            font-size: 0.8rem;
+          }
         }
         &:nth-child(2) {
           @include FontStyles(normal, 400, 12px, 14px);
+          @include mobile {
+            font-size: 0.5rem;
+          }
         }
       }
     }
@@ -44,6 +61,11 @@
   .contact {
     @include Flexbox($justify: space-between);
     gap: 1rem;
+
+    @include mobile {
+      width: 40%;
+    }
+
     > svg {
       color: $purple;
       :hover {
