--- a/client/src/components/home/career/Career.module.scss
+++ b/client/src/components/home/career/Career.module.scss
@@ -198,6 +198,9 @@ $small-gap: 0.5rem;
     @include flex-container($gap: 0);
     word-break: keep-all;
     padding-bottom: 0.8rem;
+    @include mobile {
+      font-size: 0.5rem;
+    }
 
     .header {
       display: block;
