--- a/client/src/components/home/visitor/Visitor.module.scss
+++ b/client/src/components/home/visitor/Visitor.module.scss
@@ -1,40 +1,69 @@
 @import "@/styles/scss/globals";
+@import "@/styles/scss/responsive";
 
+// Visitor
 .visitor {
   @include Flexbox($justify: flex-start);
   width: 100%;
-  // height: 300px;
   margin: 2rem 0;
+
+  @include mobile {
+    flex-direction: column;
+  }
 }
 
+// MonthlyVisitors
 .monthly_visitor {
+  @include mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   > h2 {
     @include FontStyles(normal, 400, 1rem, 25px);
-  }
-
-  > p {
-    @include FontStyles(normal, 400, 1rem, 28px);
-    color: #8d9092;
-  }
-
-  .currnt_month {
-    @include Flexbox($justify: flex-start);
-    gap: 1rem;
-
-    > h1 {
-      @include FontStyles(normal, 500, 43px, 64px);
+    @include mobile {
+      font-size: 0.85rem;
     }
   }
 
-  .today {
-    @include Flexbox($justify: flex-start);
-    gap: 0.3rem;
-    background: #f2f2f2;
-    border-radius: 21px;
-    padding: 0.2rem 0.5rem;
+  .wrap {
+    @include mobile {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    > p {
+      @include mobile {
+        font-size: 0.85rem;
+      }
+    }
+    .currnt_month {
+      @include Flexbox($justify: flex-start);
+      gap: 1rem;
 
-    > svg {
-      transform: rotate(48deg);
+      > h1 {
+        @include FontStyles(normal, 500, 43px, 64px);
+        @include mobile {
+          font-size: 2rem;
+        }
+      }
+    }
+
+    .today {
+      @include Flexbox($justify: flex-start);
+      gap: 0.3rem;
+      background: #f2f2f2;
+      border-radius: 21px;
+      padding: 0.2rem 0.5rem;
+
+      > p {
+        @include FontStyles(normal, 400, 1rem, 28px);
+        color: #8d9092;
+      }
+
+      > svg {
+        transform: rotate(48deg);
+      }
     }
   }
 }
