--- a/client/src/components/home/career/Career.module.scss
+++ b/client/src/components/home/career/Career.module.scss
@@ -51,6 +51,9 @@ $small-gap: 0.5rem;
     @include mobile {
       flex-direction: column;
     }
+    @include tabletToMobile {
+      flex-direction: column;
+    }
 
     .career_detail {
       @include flex-container(row, flex-start, flex-start, 2rem);
@@ -62,6 +65,9 @@ $small-gap: 0.5rem;
         flex-direction: column;
         order: 2;
       }
+      @include tabletToMobile {
+        order: 2;
+      }
     }
 
     .post_list {
@@ -71,11 +77,16 @@ $small-gap: 0.5rem;
       .title {
         @include Title;
       }
+
       > div {
         > div {
           @include mobile {
             display: flex;
             gap: 1rem;
+            overflow: auto;
+          }
+          @include tabletToMobile {
+            height: 80vh;
             overflow: auto;
           }
 
@@ -115,7 +126,9 @@ $small-gap: 0.5rem;
     width: 100%;
     @include flex-container(row, $justify: space-between);
     @include text-styles($heading-font-size, $heading-line-height);
-
+    @include tabletToMobile {
+      gap: 0;
+    }
     > p {
       // word-break: keep-all;
       @include mobile {
@@ -126,13 +139,21 @@ $small-gap: 0.5rem;
         white-space: nowrap;
         width: calc(10em / 2 + 5px);
       }
+      @include tabletToMobile {
+        font-size: 1rem;
+        line-height: 23px;
+      }
     }
 
     > svg {
       width: 2rem;
       margin-top: 0.5rem;
+
       @include mobile {
         display: none;
+      }
+      @include tabletToMobile {
+        width: 3.5rem;
       }
     }
   }
@@ -141,6 +162,7 @@ $small-gap: 0.5rem;
     @include text-styles($small-font-size, $small-line-height);
     letter-spacing: 0.5px;
     color: var(--color-lightGray);
+
     @include mobile {
       font-size: 0.58rem;
       line-height: 18px;
@@ -148,6 +170,9 @@ $small-gap: 0.5rem;
       text-overflow: ellipsis;
       white-space: nowrap;
       width: calc(10em / 2 + 5px);
+    }
+    @include tabletToMobile {
+      font-size: 0.58rem;
     }
   }
 }
@@ -163,6 +188,8 @@ $small-gap: 0.5rem;
     padding-bottom: 1rem;
     object-fit: cover;
     height: auto;
+    max-height: 200px;
+
     @include mobile {
       width: 100%;
     }
@@ -174,16 +201,24 @@ $small-gap: 0.5rem;
     > p {
       @include text-styles($small-font-size, $small-line-height, 500);
       padding-bottom: 0.5rem;
+
       @include mobile {
         font-size: 0.58rem;
+      }
+      @include tabletToMobile {
+        font-size: 0.7rem;
       }
     }
 
     > h1 {
       @include text-styles($heading-font-size, 30px, 500);
+
       @include mobile {
         font-size: 1rem;
         font-weight: 600;
+      }
+      @include tabletToMobile {
+        font-size: 1rem;
       }
     }
   }
@@ -215,6 +250,10 @@ $small-gap: 0.5rem;
       > li {
         @include text-styles;
         padding-left: 0.5rem;
+
+        @include tabletToMobile {
+          font-size: 0.8rem;
+        }
       }
 
       .item {
@@ -260,7 +299,11 @@ $small-gap: 0.5rem;
 .youtube {
   height: 100%;
   flex: 2;
+
   @include mobile {
+    width: 100%;
+  }
+  @include tabletToMobile {
     width: 100%;
   }
 }
