--- a/client/src/components/home/visitor/Visitor.module.scss
+++ b/client/src/components/home/visitor/Visitor.module.scss
@@ -9,6 +9,7 @@
 
   @include mobile {
     flex-direction: column;
+    gap: 1rem;
   }
 }
 
@@ -19,10 +20,16 @@
     flex-direction: column;
     align-items: center;
   }
+
   > h2 {
     @include FontStyles(normal, 400, 1rem, 25px);
+
     @include mobile {
       font-size: 0.85rem;
+    }
+    @include tabletToMobile {
+      font-size: 0.85rem;
+      line-height: 22px;
     }
   }
 
@@ -32,19 +39,28 @@
       flex-direction: column;
       align-items: center;
     }
+
     > p {
       @include mobile {
         font-size: 0.85rem;
       }
+      @include tabletToMobile {
+        font-size: 0.85rem;
+      }
     }
+
     .currnt_month {
       @include Flexbox($justify: flex-start);
       gap: 1rem;
 
       > h1 {
         @include FontStyles(normal, 500, 43px, 64px);
+
         @include mobile {
           font-size: 2rem;
+        }
+        @include tabletToMobile {
+          font-size: 2.3rem;
         }
       }
     }
@@ -59,10 +75,17 @@
       > p {
         @include FontStyles(normal, 400, 1rem, 28px);
         color: #8d9092;
+
+        @include tabletToMobile {
+          font-size: 0.8rem;
+        }
       }
 
       > svg {
         transform: rotate(48deg);
+        @include tabletToMobile {
+          width: 1.2rem;
+        }
       }
     }
   }
