--- a/client/src/styles/scss/Hero.module.scss
+++ b/client/src/styles/scss/Hero.module.scss
@@ -48,13 +48,23 @@
         font-size: 2.6rem;
         line-height: 65px;
       }
+      @include tabletToMobile {
+        font-size: 3.9rem;
+        line-height: 78px;
+      }
     }
     > p {
       @include FontStyles(normal, 400, 16px, 28px);
       letter-spacing: 0.5px;
+
       @include mobile {
         font-size: 0.73rem;
         line-height: 18px;
+      }
+
+      @include tabletToMobile {
+        font-size: 1.2rem;
+        line-height: 30px;
       }
     }
   }
