--- a/client/src/styles/scss/Main.module.scss
+++ b/client/src/styles/scss/Main.module.scss
@@ -10,4 +10,8 @@
     flex-direction: column;
     gap: 2.5rem;
   }
+  @include tabletToMobile {
+    flex-direction: column;
+    gap: 2.5rem;
+  }
 }
