--- a/client/src/styles/scss/_responsive.scss
+++ b/client/src/styles/scss/_responsive.scss
@@ -53,42 +53,42 @@ $point-desktop: 1800px;
 
 // 모바일: 최소 "모바일" 사이즈부터 ~최대 "모바일에서 태블릿" 사이즈까지
 @mixin mobile {
-  @media (min-width: #{$point-mobile}) and (max-width: #{$point-tabletToMobile - 1px}) {
+  @media (min-width: #{$point-mobile}) and (max-width: #{$point-tabletToMobile}) {
     @content;
   }
 }
 
 // 모바일에서 태블릿 : 최소 '모바일에서 태블릿'사이즈부터 ~ 최대 '태블릿'사이즈까지
 @mixin tabletToMobile {
-  @media (min-width: #{$point-tabletToMobile}) and (max-width: #{$point-tablet - 1px}) {
+  @media (min-width: #{$point-tabletToMobile}) and (max-width: #{$point-tablet}) {
     @content;
   }
 }
 
 // 태블릿 : 최소'태블릿'사이즈부터 ~ 최대 '태블릿에서 노트북'사이즈까지
 @mixin tablet {
-  @media (min-width: #{$point-tablet}) and (max-width: #{$point-laptopToTablet - 1px}) {
+  @media (min-width: #{$point-tablet}) and (max-width: #{$point-laptopToTablet}) {
     @content;
   }
 }
 
 // 태블릿에서 노트북 : 최소 '태블릿에서 노트북'사이즈부터 ~ 최대 '노트북'사이즈까지
 @mixin laptopToTablet {
-  @media (min-width: #{$point-laptopToTablet}) and (max-width: #{$point-laptop - 1px}) {
+  @media (min-width: #{$point-laptopToTablet}) and (max-width: #{$point-laptop}) {
     @content;
   }
 }
 
 // 노트북 : 최소 '노트북'사이즈부터 ~ 최대 '노트북에서 데스크탑'사이즈까지
 @mixin laptop {
-  @media (min-width: #{$point-laptop}) and (max-width: #{$point-desktopToLaptop - 1px}) {
+  @media (min-width: #{$point-laptop}) and (max-width: #{$point-desktopToLaptop}) {
     @content;
   }
 }
 
 // 노트북에서 데스크탑 : 최소 '노트북에서 데스크탑'사이즈부터 ~ 최대 '데스크탑'사이즈까지
 @mixin desktopToLaptop {
-  @media (min-width: #{$point-desktopToLaptop}) and (max-width: #{$point-desktop - 1px}) {
+  @media (min-width: #{$point-desktopToLaptop}) and (max-width: #{$point-desktop}) {
     @content;
   }
 }
